--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: dimgray;
 }
 
 * {
   color: floralwhite;
-  font-family: Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
+  font-family: Didot, 'Bodoni MT', 'Noto Serif Display', 'URW Palladio L', P052, Sylfaen, serif;
   font-weight: normal;
-
+  text-decoration: none;
 }
 
 body {
@@ -25,6 +25,9 @@ h1 {
 h2 {
   text-align: center;
   font-size: 4rem;
+  font-family: "Pinyon Script", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 a {
