--- a/theleague/theleague.css
+++ b/theleague/theleague.css
@@ -8,7 +8,7 @@ html {
   color: floralwhite;
   font-family: Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
   font-weight: normal;
-
+  text-decoration: none;
 }
 
 body {
@@ -19,19 +19,27 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 2rem;
+  font-size: 5rem;
+  font-family: "Pinyon Script", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.where {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
+
+.special { 
+  display: flex;
+  justify-content: center;
+  width: 40%
 }
 
 h2 {
   text-align: center;
-  font-size: 1.5rem;
-}
-
-.roll {
-  display: flex;
-  justify-content: center;
-  margin-top: 2.5%;
-  margin-bottom: 2.5%;
+  font-size: 2rem;
 }
 
 .imagetext {
@@ -39,25 +47,16 @@ h2 {
   text-align: center;
 }
 
-p {
-  text-align: center;
-  font-size: 1rem; 
-}
-
 img {
   max-width: 80%;
   border: 0rem solid antiquewhite;
-  opacity: 0.75;
   border-radius: 2rem;
-}
-
-img:hover {
-  opacity: 1;
 }
 
 hr {
   width: 75%;
 }
+
 footer{
   text-align: center;
   margin-top: auto;
