--- a/stewartball/playerprofiles/zach/zach.css
+++ b/stewartball/playerprofiles/zach/zach.css
@@ -8,7 +8,7 @@ html {
   color: floralwhite;
   font-family: Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
   font-weight: normal;
-
+  text-decoration: none;
 }
 
 body {
