--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 
 * {
   color: floralwhite;
-  font-family: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
-  font-weight: normal;
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+  font-weight: 100;
   text-decoration: none;
 }
 
