--- a/stewartball/stewartball.css
+++ b/stewartball/stewartball.css
@@ -1,82 +1,70 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: black;
 }
 
 * {
-  color: floralwhite;
-  font-family: Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
-  font-weight: normal;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  color: white;
   text-decoration: none;
 }
 
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-h1 {
-  text-align: center;
-  font-size: 5rem;
-  font-family: "Pinyon Script", cursive;
-  font-weight: 400;
-  font-style: normal;
-  margin-bottom: -5%;
-}
-
-.where {
   display: grid;
-  gap: 0.5rem;
-  justify-items: center;
-  justify-content: center;
-  align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  place-items: center;
+  background-image: url(NASA.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 1;
+  margin: 15% 0;
 }
 
-@media only screen and (min-width: 500px) {
-   .where {
-    grid-template-columns: repeat(2, 1fr);
-    }
+.title {
+  z-index: 2;
+  border: 2px solid white;
+  opacity: 50%;
+  padding: 0% 10%;
 }
 
-@media only screen and (max-width: 500px) {
-  .where {
-  grid-template-columns: repeat(1, 1fr);
-  }
+.heading1 {
+  font-size: 8rem;
+  text-shadow: gray 2px 5px 10px;
 }
 
-.special { 
+.about {
+  z-index: 2;
   display: flex;
-  justify-content: center;
+  margin: 10% 0;
   width: 100%;
 }
 
-h2 {
+.text {
+  width: 50%;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1rem;
+  opacity: 0.75;
 }
 
-.imagetext {
-  max-width: 75%;
-  text-align: center;
+.heading2 {
+  font-size: 6rem;
+  animation: fadeCity linear both;
+  animation-timeline: view();
 }
 
-img {
-  max-width: 80%;
-  border: 0rem solid antiquewhite;
-  border-radius: 2rem;
+footer {
+  margin: 20% 0% 2.5% 0%;
 }
 
-hr {
-  width: 75%;
-}
-
-footer{
-  text-align: center;
-  margin-top: auto;
-  margin-bottom: 3%;
-  font-size: 0.75rem;
+@keyframes fadeCity{
+  0% {
+    opacity: 0;
+  }
+  45%, 55% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
